# aingine

./: .gitattributes  .gitignore  .gitmodules  README.md
code/: CMakeLists.txt
code/AIngine/: CMakeLists.txt  aingineeditor-config.cmake  engine-config.cmake
code/AIngine/include/private/: gl_error.h  readfile.h
code/AIngine/include/private/Editor/: CameraWidget.h  Editor.h  ImGuiWidget.h  LogWidget.h  SceneGraphWidget.h  ScriptingAPI.h  Serialization.h
code/AIngine/include/private/Rendering/: ParticleRenderer.h  PhysicsRenderer.h  Renderer.h  UIRenderer.h
code/AIngine/include/private/Structures/: SceneGraph.h
code/AIngine/include/public/: Application.h  ApplicationEvents.h  Assets.h  Component.h  Core.h  EntryPoint.h  GameObject.h  Input.h  InputEvents.h  Layer.h  LayerStack.h  Physics.h  SceneGraph.h  Traverser.h  Window.h  bitmap.h  log.h  mesh.h  meshloader.h  texture.h
code/AIngine/include/public/AIngine/: Agent.h  Component.h  Constants.h  Core.h  GameObject.h  Graphics.h  Input.h  KeyCodes.h  Macros.h  Math.h  ParticleEmitter.h  Physics.h  Script.h  SoundComponent.h  Sounds.h  Sprite.h  World.h  XCSAgents.h
code/AIngine/include/public/Assets/: Assets.h
code/AIngine/include/public/Debug/: DebugDraw.h  log.h
code/AIngine/include/public/Events/: ApplicationEvents.h  Event.h  InputEvents.h
code/AIngine/include/public/Rendering/: Camera.h  Font.h  Renderer.h  SceneGraph.h  SceneNode.h  Traverser.h  Viewport.h  bitmap.h  mvp.h  shader.h  texture.h
code/AIngine/include/public/Structures/: Layer.h  LayerStack.h  Rectangle.h  SceneGraph.h  Traverser.h  memory.h
code/AIngine/include/public/UI/: Button.h  CheckBox.h  ImGuiLayer.h  Image.h  LogWidget.h  Slider.h  Text.h  UIELement.h
code/AIngine/include/public/Util/: FileSystem.h  Project.h  Random.h  SystemCommand.h
code/AIngine/src/: Application.cxx  Assets.cxx  GameObject.cxx  Input.cxx  Layer.cxx  LayerStack.cxx  Physics.cxx  SceneGraph.cxx  Window.cxx  bitmap.cxx  gl_error.cxx  log.cxx  mesh.cxx  meshloader.cxx  mvp.cxx  shader.cxx  texture.cxx
code/AIngine/src/AIngine/: Agent.cxx  GameObject.cxx  Graphics.cxx  Input.cxx  ParticleEmitter.cxx  Physics.cxx  SoundComponent.cxx  Sounds.cxx  Sprite.cxx  World.cxx  XCSAgents.cxx
code/AIngine/src/Assets/: Assets.cxx
code/AIngine/src/Debug/: DebugDraw.cxx  log.cxx
code/AIngine/src/Editor/: CameraWidget.cxx  Editor.cxx  SceneGraphWidget.cxx  ScriptingAPI.cxx  Serialization.cxx
code/AIngine/src/Editor/Widgets/: AddComponentWidget.cxx  AgentComponentWidget.cxx  ButtonComponentWidget.cxx  CameraWidget.cxx  CanvasComponentWidget.cxx  CheckBoxComponentWidget.cxx  Common.cxx  ImageComponentWidget.cxx  MenuBarWidget.cxx  ParticleEmitterWidget.cxx  PhysicsComponentWidget.cxx  PopUps.cxx  SceneGraphWidget.cxx  SliderComponentWidget.cxx  SoundComponentWidget.cxx  SpriteComponentWidget.cxx  TextureComponentWidget.cxx  ToolbarWidget.cxx  TransformComponentWidget.cxx  UIElementComponentWidget.cxx  UITextComponentWidget.cxx
code/AIngine/src/Rendering/: Camera.cxx  Font.cxx  ParticleRenderer.cxx  PhysicsRenderer.cxx  Renderer.cxx  SceneGraph.cxx  SceneNodes.cxx  UIRenderer.cxx  Viewport.cxx  bitmap.cxx  mesh.cxx  meshloader.cxx  mvp.cxx  shader.cxx  texture.cxx
code/AIngine/src/Structures/: Layer.cxx  LayerStack.cxx  SceneGraph.cxx
code/AIngine/src/UI/: Button.cxx  CheckBox.cxx  ImGuiLayer.cxx  Image.cxx  Slider.cxx  Text.cxx  UIElement.cxx  imgui_impl_opengl3.cpp
code/AIngine/src/Util/: FileSystem.cxx  Project.cxx  Random.cxx  SystemCommand.cxx
code/CrappyBird/: CMakeLists.txt
code/CrappyBird/include/: BackGround.h  CrappyBird.h  Effects.h  Obstacle.h  Obstacles.h  PickUp.h  Player.h
code/CrappyBird/src/: BackGround.cxx  CrappyBird.cxx  Effects.cxx  Obstacle.cxx  Obstacles.cxx  PickUp.cxx  Player.cxx
code/CrappyBird_old/: CMakeLists.txt
code/CrappyBird_old/include/: CrappyBird_old.h
code/CrappyBird_old/src/: CrappyBird_old.cxx
code/Launcher/: CMakeLists.txt
code/Launcher/include/: Launcher.h  LauncherGUI.h  Project.h  TemplateFiles.h
code/Launcher/src/: Launcher.cxx  LauncherGUI.cxx
code/Projects/CrappyBird/: CMakeLists.txt  CrappyBird.proj  CrappyBird.proj.in
code/Projects/CrappyBird/Resources/: Credits.txt
code/Projects/CrappyBird/Resources/scenes/: MainMenu.json  testScene.json
code/Projects/CrappyBird/code/include/: Agent.h  AgentXCSR.h  BackGround.h  CrappyBird.h  EffectDurationDisplay.h  Effects.h  MainMenu.h  Obstacle.h  Obstacles.h  PickUp.h  PickUpFactory.h  Player.h  PlayerMainMenu.h
code/Projects/CrappyBird/code/src/: Agent.cxx  AgentXCSR.cxx  BackGround.cxx  CrappyBird.cxx  EffectDurationDisplay.cxx  Effects.cxx  MainMenu.cxx  Obstacle.cxx  Obstacles.cxx  PickUp.cxx  PickUpFactory.cxx  Player.cxx  PlayerMainMenu.cxx  Scripting_generated.cxx
code/Projects/Forklifts/: .gitignore  CMakeLists.txt  Forklifts.proj.in
code/Projects/Forklifts/Resources/: Credits.txt  Edges.txt  Nodes.txt  SFAs0.txt  SFAs1.txt  SFAs2.txt  SFAs3.txt
code/Projects/Forklifts/Resources/scenes/: Scene0.json
code/Projects/Forklifts/code/include/: Edge.h  Experiment.h  Forklift.h  ForkliftAgent.h  Forklifts.h  Graph.h  Node.h  Tasks.h
code/Projects/Forklifts/code/src/: Edge.cxx  Experiment.cxx  Forklift.cxx  ForkliftAgent.cxx  Forklifts.cxx  Graph.cxx  Node.cxx  Scripting_generated.cxx
code/Projects/Pong/: CMakeLists.txt  Pong.proj.in
code/Projects/Pong/Resources/scenes/: Level0.json  MainMenu.json  NewLevel.json
code/Projects/Pong/Resources/xcs/: 001_CSR_fail.json  001_UBR_n=2757_sucess.json  002_CSR_fail.json  003_CSR_fail.json  004_CSR.json  004_CSR_fail.json  (+7 more)
code/Resources/: CMakeLists.txt
code/Resources/AIngine/: Credits.txt
code/Resources/CrappyBird/scenes/: testScene.json
code/Resources/Launcher/: imgui.ini  project.proj  project.proj.in
code/assets/: CMakeLists.txt
code/assets/CrappyBird/: Credits.txt
code/assets/CrappyBird/scenes/: testScene.json
code/assets/Intellgine/: Credits.txt
code/cmake/Modules/: assign_source_group.cmake
code/game/: CMakeLists.txt
code/game/include/: game.h
code/game/src/: game.cxx
(+94 files in other folders)
